--- a/requirements.txt
+++ b/requirements.txt
@@ -1,141 +1,221 @@
 absl-py==1.2.0
-aiohttp==3.8.1
-aiohttp-cors==0.7.0
-aioredis==2.0.1
-aiosignal==1.2.0
+actionlib==1.13.2
+angles==1.9.13
 astunparse==1.6.3
-async-timeout==4.0.2
-asynctest==0.13.0
 atari-py==0.2.6
 attrs==22.1.0
 Automat==20.2.0
-beautifulsoup4==4.11.1
-blessed==1.19.1
+bondpy==1.8.6
 cached-property==1.5.2
-cachetools==5.2.0
-certifi==2022.6.15.1
+cachetools==4.2.4
+camera-calibration==1.16.0
+camera-calibration-parsers==1.12.0
+catkin==0.8.10
+certifi==2022.9.14
 charset-normalizer==2.1.1
 click==8.1.3
 cloudpickle==1.3.0
-colorama==0.4.5
-colorful==0.5.4
 commonmark==0.9.1
 constantly==15.1.0
+contourpy==1.0.5
+controller-manager==0.19.5
+controller-manager-msgs==0.19.5
 coverage==6.4.4
+cv-bridge==1.16.0
 cycler==0.11.0
-dm-tree==0.1.7
+diagnostic-analysis==1.11.0
+diagnostic-common-diagnostics==1.11.0
+diagnostic-updater==1.11.0
+docker-pycreds==0.4.0
+dynamic-reconfigure==1.7.3
 eclipse-sumo==1.10.0
 execnet==1.9.0
-filelock==3.8.0
 flatbuffers==2.0.7
-fonttools==4.37.1
-frozenlist==1.3.1
+fonttools==4.37.3
 future==0.18.2
 gast==0.4.0
-google==3.0.0
-google-api-core==2.8.2
-google-auth==2.11.0
+gazebo_plugins==2.9.2
+gazebo_ros==2.9.2
+gencpp==0.6.5
+geneus==3.0.0
+genlisp==0.4.18
+genmsg==0.5.16
+gennodejs==2.0.2
+genpy==0.6.15
+gitdb==4.0.9
+GitPython==3.1.27
+google-auth==1.35.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-googleapis-common-protos==1.56.4
-gpustat==1.0.0
 grpcio==1.48.1
 gym==0.19.0
 h5py==3.7.0
 hyperlink==21.0.0
-idna==3.3
+idna==3.4
 ijson==3.1.4
+image-geometry==1.16.0
 importlib-metadata==4.12.0
-importlib-resources==5.9.0
 incremental==21.3.0
 iniconfig==1.1.1
+interactive-markers==1.12.0
+joint-state-publisher==1.15.1
+joint-state-publisher-gui==1.15.1
 jsonpatch==1.32
 jsonpointer==2.3
-jsonschema==4.16.0
 keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
+laser_geometry==1.6.7
 libclang==14.0.6
-lz4==4.0.2
 Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib==3.5.3
-msgpack==1.0.4
-multidict==6.0.2
-numpy==1.21.6
-nvidia-ml-py==11.495.46
-oauthlib==3.2.0
-opencensus==0.11.0
-opencensus-context==0.1.3
-opencv-python==4.1.2.30
-opencv-python-headless==4.1.2.30
+matplotlib==3.6.0
+message-filters==1.15.14
+-e git+ssh://git@github.com/yuant95/SMARTS_track1.git@fb7b459d27ce4efe475a552404aeab465e10fd52#egg=multi_scenario&subdirectory=competition/track1/train
+numpy==1.23.3
+oauthlib==3.2.1
+opencv-python==4.6.0.66
 opt-einsum==3.3.0
 packaging==21.3
 Panda3D==1.10.9
 panda3d-gltf==0.13
 panda3d-simplepbr==0.10
-pandas==1.3.5
+pandas==1.5.0
+pathtools==0.1.2
 Pillow==9.2.0
-pkgutil_resolve_name==1.3.10
+pkg_resources==0.0.0
 pluggy==1.0.0
-prometheus-client==0.14.1
-protobuf==3.19.4
+promise==2.3
+protobuf==3.20.1
 psutil==5.9.2
 py==1.11.0
 py-cpuinfo==8.0.0
-py-spy==0.3.14
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybullet==3.0.6
 Pygments==2.13.0
 pyparsing==3.0.9
-pyrsistent==0.18.1
 pytest==7.1.3
 pytest-benchmark==3.4.1
 pytest-cov==3.0.0
 pytest-forked==1.4.0
 pytest-xdist==2.5.0
 python-dateutil==2.8.2
+python-qt-binding==0.4.4
 pytz==2022.2.1
 PyYAML==6.0
-pyzmq==23.2.1
-ray==1.0.1.post1
-redis==3.4.1
+pyzmq==24.0.1
+qt-dotgraph==0.4.2
+qt-gui==0.4.2
+qt-gui-cpp==0.4.2
+qt-gui-py-common==0.4.2
 requests==2.28.1
 requests-oauthlib==1.3.1
+resource_retriever==1.12.7
 rich==12.5.1
+rosbag==1.15.14
+rosboost-cfg==1.15.8
+rosclean==1.15.8
+roscreate==1.15.8
+rosgraph==1.15.14
+roslaunch==1.15.14
+roslib==1.15.8
+roslint==0.12.0
+roslz4==1.15.14
+rosmake==1.15.8
+rosmaster==1.15.14
+rosmsg==1.15.14
+rosnode==1.15.14
+rosparam==1.15.14
+rospy==1.15.14
+rosservice==1.15.14
+rostest==1.15.14
+rostopic==1.15.14
+rosunit==1.15.8
+roswtf==1.15.14
+rqt-moveit==0.5.10
+rqt-reconfigure==0.5.5
+rqt-robot-dashboard==0.5.8
+rqt-robot-monitor==0.5.14
+rqt-rviz==0.7.0
+rqt_action==0.4.9
+rqt_bag==0.5.1
+rqt_bag_plugins==0.5.1
+rqt_console==0.4.11
+rqt_dep==0.4.12
+rqt_graph==0.4.14
+rqt_gui==0.5.3
+rqt_gui_py==0.5.3
+rqt_image_view==0.4.16
+rqt_launch==0.4.9
+rqt_logger_level==0.4.11
+rqt_msg==0.4.10
+rqt_nav_view==0.5.7
+rqt_plot==0.4.13
+rqt_pose_view==0.5.11
+rqt_publisher==0.4.10
+rqt_py_common==0.5.3
+rqt_py_console==0.4.10
+rqt_robot_steering==0.5.12
+rqt_runtime_monitor==0.5.9
+rqt_service_caller==0.4.10
+rqt_shell==0.4.11
+rqt_srv==0.4.9
+rqt_tf_tree==0.6.3
+rqt_top==0.4.10
+rqt_topic==0.4.13
+rqt_web==0.4.10
 rsa==4.9
 Rtree==1.0.0
-scipy==1.7.3
+ruamel.yaml==0.17.17
+ruamel.yaml.clib==0.2.6
+rviz==1.14.19
+scipy==1.9.1
+sensor-msgs==1.13.1
+sentry-sdk==1.9.8
+setproctitle==1.3.2
 sh==1.14.3
 Shapely==1.8.4
+shortuuid==1.0.9
 six==1.16.0
-soupsieve==2.3.2.post1
+smach==2.5.0
+smach-ros==2.5.0
+smarts @ git+https://github.com/huawei-noah/SMARTS.git@2690423f048cfd01929d4b4491a871073db9070f
+smclib==1.8.6
+smmap==5.0.0
+stable-baselines3==1.4.0
 tableprint==0.9.1
-tabulate==0.8.10
-tensorboard==2.10.0
+tensorboard==2.2.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorboardX==2.5.1
 tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
-termcolor==1.1.0
+termcolor==2.0.1
+tf==1.13.2
+tf-conversions==1.13.2
+tf2-geometry-msgs==0.7.5
+tf2-kdl==0.7.5
+tf2-py==0.7.5
+tf2-ros==0.7.5
 tomli==2.0.1
-torch==1.4.0
+topic-tools==1.15.14
+torch==1.9.0+cu111
+torchaudio==0.9.0
 torchfile==0.1.0
-torchvision==0.5.0
+torchvision==0.10.0+cu111
 tornado==6.2
 trimesh==3.9.29
 Twisted==22.8.0
 typing_extensions==4.3.0
 urllib3==1.26.12
 visdom==0.1.8.9
+wandb==0.13.3
 wcwidth==0.2.5
 websocket-client==1.4.1
 Werkzeug==2.2.2
 wrapt==1.14.1
-yarl==1.8.1
+xacro==1.14.13
 yattag==1.14.0
 zipp==3.8.1
 zope.interface==5.4.0
