--- a/competition/track1/submission/requirements.txt
+++ b/competition/track1/submission/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==1.1.0
 attrs==21.4.0
 Automat==20.2.0
+bezier==2021.2.12
 cachetools==4.2.4
 certifi==2022.6.15
 charset-normalizer==2.1.0
@@ -35,7 +36,7 @@ stable-baselines3==1.4.0
 tensorboard==2.2.0
 torch==1.12.0
 torchfile==0.1.0
-torchvision==0.14.0
+torchvision==0.13.0
 Twisted==22.4.0
 typing_extensions==4.3.0
 urllib3==1.26.10
