--- a/competition/track2/submission/requirements.txt
+++ b/competition/track2/submission/requirements.txt
@@ -1,47 +1,6 @@
-absl-py==1.1.0
-attrs==21.4.0
-Automat==20.2.0
-bezier==2021.2.12
-cachetools==4.2.4
-certifi==2022.6.15
-charset-normalizer==2.1.0
-fonttools==4.34.4
-google-auth==1.35.0
-grpcio==1.47.0
-idna==3.3
-importlib-metadata==4.12.0
-incremental==21.3.0
-kiwisolver==1.4.3
-Markdown==3.3.7
-matplotlib==3.5.2
+d3rlpy==1.1.1
 numpy==1.23.1
-oauthlib==3.2.0
-pandas==1.4.3
 Pillow==9.2.0
-protobuf==3.20.1
-psutil==5.9.1
-Pygments==2.12.0
-pytz==2022.1
-pyzmq==23.2.0
-rich==12.5.1
-rsa==4.8
-Rtree==1.0.0
-ruamel.yaml==0.17.17
-ruamel.yaml.clib==0.2.6
-scipy==1.8.1
-sh==1.14.2
-Shapely==1.8.2
-six==1.16.0
-stable-baselines3==1.4.0
-tensorboard==2.2.0
-torch==1.12.0
-torchfile==0.1.0
-torchvision==0.13.0
-Twisted==22.4.0
-typing_extensions==4.3.0
-urllib3==1.26.10
-visdom==0.1.8.9
-websocket-client==1.3.3
-Werkzeug==2.1.2
-zipp==3.8.1
-zope.interface==5.4.0
+PyYAML==6.0
+torch==1.11.0
+torchvision==0.12.0
