--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,7 @@ xdummy.log
 log/
 wandb/
 logs/
+smarts-project.offline-datasets/
 
 # replay data
 *.jsonl
@@ -159,3 +160,5 @@ collected_observations/
 
 # Static type check
 .pytype
+
+smarts-project.offline-datasets/
