--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -1,15 +1,16 @@
 smarts:
   # Environment
   sumo_gui: False # If True, enables sumo-gui display.
+  head: False
   img_meters: 50 # Observation image area size in meters.
   img_pixels: 112 # Observation image size in pixels.
   num_stack: 3 # Number of frames to stack as input to policy network.
   scenarios: 
-    - "1_to_2lane_left_turn_c"
-    - "1_to_2lane_left_turn_t"
+    # - "1_to_2lane_left_turn_c"
+    # - "1_to_2lane_left_turn_t"
     - "3lane_merge_single_agent"
-    - "3lane_cruise_single_agent"
-    - "3lane_overtake"
+    # - "3lane_cruise_single_agent"
+    # - "3lane_overtake"
 
   # Training
   # epochs: 5_000 # Number of training loops.
