--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -6,8 +6,8 @@ smarts:
   img_pixels: 112 # Observation image size in pixels.
   num_stack: 3 # Number of frames to stack as input to policy network.
   scenarios: 
-    # - "1_to_2lane_left_turn_c"
-    - "1_to_2lane_left_turn_t"
+    - "1_to_2lane_left_turn_c"
+    # - "1_to_2lane_left_turn_t"
     # - "3lane_merge_single_agent"
     # - "3lane_cruise_single_agent"
     # - "3lane_overtake"
