--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -1,6 +1,6 @@
 smarts:
   # Environment
-  sumo_gui: True # If True, enables sumo-gui display.
+  sumo_gui: False # If True, enables sumo-gui display.
   head: False
   img_meters: 50 # Observation image area size in meters.
   img_pixels: 112 # Observation image size in pixels.
