--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -7,10 +7,12 @@ smarts:
   num_stack: 3 # Number of frames to stack as input to policy network.
   scenarios: 
     # - "1_to_2lane_left_turn_c"
-    - "1_to_2lane_left_turn_t"
+    # - "1_to_2lane_left_turn_t"
     # - "3lane_merge_single_agent"
-    # - "3lane_cruise_single_agent"
+    - "3lane_cruise_single_agent"
     # - "3lane_overtake"
+    # - "4lane_t"
+    # - "ITRA_1_to_2lane_left_turn_t"
 
   # Training
   # epochs: 5_000 # Number of training loops.
