have 3lane cruise social agents

--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -14,7 +14,9 @@ smarts:
     # - "4lane_t"
     # - "ITRA_1_to_2lane_left_turn_t"
     # - "3lane_cruise_single_agent_itra"
-    - "3lane_cruise_single_agent_itra_batch"
+    # - "3lane_cruise_single_agent_itra_batch"
+    - "3lane_cruise_single_agent_social"
+
 
   # Training
   # epochs: 5_000 # Number of training loops.
