add 1 to 2 lane left turn for itra

--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -15,7 +15,8 @@ smarts:
     # - "ITRA_1_to_2lane_left_turn_t"
     # - "3lane_cruise_single_agent_itra"
     # - "3lane_cruise_single_agent_itra_batch"
-    - "3lane_cruise_single_agent_social"
+    # - "3lane_cruise_single_agent_social"
+    - "1_to_2lane_left_turn_t_itra"
 
 
   # Training
