--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -16,8 +16,10 @@ smarts:
     # - "3lane_cruise_single_agent_itra"
     # - "3lane_cruise_single_agent_itra_batch"
     # - "3lane_cruise_single_agent_social"
-    - "1_to_2lane_left_turn_t_itra"
+    # - "1_to_2lane_left_turn_t_itra"
     # - "1_to_2lane_left_turn_t_social"
+    - "1_to_1lane_left_turn_c_itra"
+    # - "3lane_single_agent_itra"
 
 
   # Training
