--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -10,10 +10,11 @@ smarts:
 
     - "3lane_cruise_single_agent"
     - "3lane_merge_single_agent"
-    - "3lane_overtake"
+    # - "3lane_overtake"
     - "1_to_1lane_left_turn_c"
     - "1_to_2lane_left_turn_c"
     - "1_to_2lane_left_turn_t"
+    - "1_to_2lane_right_turn_c"
 
   smarts_zoo_scenarios:
 # SMARTS ZOO Training
@@ -23,6 +24,7 @@ smarts:
     - "1_to_1lane_left_turn_c_zoo"
     - "1_to_2lane_left_turn_c_zoo"
     - "1_to_2lane_left_turn_t_zoo"
+    - "1_to_2lane_right_turn_c_zoo"
   
   itra_scenarios:
 # ITRA Training 
@@ -30,18 +32,20 @@ smarts:
     - "3lane_cruise_single_agent_itra"
     - "3lane_single_agent_itra"
     - "1_to_1lane_left_turn_c_itra"
-    - "1_to_1lane_left_turn_c_itra_stop"
+    # - "1_to_1lane_left_turn_c_itra_stop"
     - "1_to_2lane_left_turn_c_itra"
     - "1_to_2lane_left_turn_t_itra"
+    - "1_to_2lane_right_turn_c_itra"
 
   itra_evaluation_scenarios:
   # # ITRA Evaluation
     - "eval_3lane_cruise_single_agent_itra_batch"
     - "eval_3lane_single_agent_itra"
     - "eval_1_to_1lane_left_turn_c_itra"
-    - "eval_1_to_1lane_left_turn_c_itra_stop"
+    # - "eval_1_to_1lane_left_turn_c_itra_stop"
     - "eval_1_to_2lane_left_turn_c_itra"
     - "eval_1_to_2lane_left_turn_t_itra"
+    - "eval_1_to_2lane_right_turn_c_itra"
 
   # Training
   # epochs: 5_000 # Number of training loops.
