--- a/competition/track1/train/config.yaml
+++ b/competition/track1/train/config.yaml
@@ -32,20 +32,20 @@ smarts:
     - "3lane_cruise_single_agent_itra"
     - "3lane_single_agent_itra"
     - "1_to_1lane_left_turn_c_itra"
-    # - "1_to_1lane_left_turn_c_itra_stop"
     - "1_to_2lane_left_turn_c_itra"
     - "1_to_2lane_left_turn_t_itra"
     - "1_to_2lane_right_turn_c_itra"
+    ## - "1_to_1lane_left_turn_c_itra_stop"
 
   itra_evaluation_scenarios:
   # # ITRA Evaluation
-    - "eval_3lane_cruise_single_agent_itra_batch"
-    - "eval_3lane_single_agent_itra"
-    - "eval_1_to_1lane_left_turn_c_itra"
-    # - "eval_1_to_1lane_left_turn_c_itra_stop"
-    - "eval_1_to_2lane_left_turn_c_itra"
-    - "eval_1_to_2lane_left_turn_t_itra"
-    - "eval_1_to_2lane_right_turn_c_itra"
+    # - "eval_3lane_cruise_single_agent_itra_batch"
+    # - "eval_3lane_single_agent_itra"
+    # - "eval_1_to_1lane_left_turn_c_itra"
+    # # - "eval_1_to_1lane_left_turn_c_itra_stop"
+    # - "eval_1_to_2lane_left_turn_c_itra"
+    # - "eval_1_to_2lane_left_turn_t_itra"
+    # - "eval_1_to_2lane_right_turn_c_itra"
 
   # Training
   # epochs: 5_000 # Number of training loops.
